--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 asgiref==3.7.2
 Django==4.2.10
+django-environ==0.11.2
 djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==5.3.1
+inflection==0.5.1
+install==1.3.5
+packaging==23.2
+PyJWT==1.7.1
 pytz==2024.1
+PyYAML==6.0.1
 sqlparse==0.4.4
 typing_extensions==4.10.0
+uritemplate==4.1.1
